Adição: linkando pagina entrar

--- a/web-data-viz/public/index.html
+++ b/web-data-viz/public/index.html
@@ -22,7 +22,7 @@
             <li><a href="#container-sobrenos">Sobre nós</a></li>
             <li><a href="#container-solucoes">Soluções</a></li>
             <li><a href="#container-contato">Contato</a></li>
-            <li><a href="#" class="entrar">Entrar</a></li>
+            <li><a href="entrar.html" class="entrar">Entrar</a></li>
         </ul>
 
         <div class="menu-icon">
