Subindo arquivos para o banco

--- a/web-data-viz/public/entrar.html
+++ b/web-data-viz/public/entrar.html
@@ -36,7 +36,7 @@
                 <input class="Entrar-campos" type="text" placeholder="Email" id="email_input">
                 <input class="Entrar-campos" type="password" placeholder="Senha" id="senha_input">
                 <div class="btnEntrar">
-                    <button >Entrar</button>
+                    <button onclick="entrar()" >Entrar</button>
                     <a href="">Esqueceu a senha?</a>
                 </div>
             </div>
