Subindo correção sixtaxe do apache

--- a/web-data-viz/public/dashboard.html
+++ b/web-data-viz/public/dashboard.html
@@ -50,7 +50,7 @@
                     <div class="kpi-1">
                         <span>Você está visualizando os dados de <span>
                                 <select>
-                                    <option value="">Barueri</option>
+                                    <option value="" id="regiao">Barueri</option>
                                 </select>
                     </div>
                     <div class="kpi-2">
@@ -59,26 +59,26 @@
                             <div class="container-dormitorios">
                                 <div class="dados-dormitorio">
                                     <h4>1 Dormitorio</h4>
-                                    <span>R$ 1.200,00</span>
+                                    <span id="umDormitorio">R$ 1.200,00</span>
                                 </div>
                                 <div class="dados-dormitorio">
                                     <h4>2 Dormitorio</h4>
-                                    <span>R$ 1.200,00</span>
+                                    <span id="doisDormitorio">R$ 1.200,00</span>
                                 </div>
                                 <div class="dados-dormitorio">
                                     <h4>3 Dormitorio</h4>
-                                    <span>R$ 1.200,00</span>
+                                    <span id="tresDormitorio">R$ 1.200,00</span>
                                 </div>
                                 <div class="dados-dormitorio">
                                     <h4>4+ Dormitorio</h4>
-                                    <span>R$ 1.200,00</span>
+                                    <span id="quatroDormitorio">R$ 1.200,00</span>
                                 </div>
                             </div>
                         </div>
                         <div class="container-kpi2-2">
                             <h3>Média de moradores por domicilio</h3>
                             <div>
-                                <span>3.2</span>
+                                <span id="mediaMoradores">3.2</span>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                 <div class="container-selects">
                     <label for="">
                         <select id="select">
-                            <option value="">Anual/Semestral</option>
+                            <option value="" id="variacaoAnual/Semestral">Anual/Semestral</option>
                             <option value="1">Opção 1</option>
                             <option value="2">Opção 2</option>
                             <option value="3">Opção 3</option>
@@ -101,7 +101,7 @@
                     </label>
                     <label for="">
                         <select id="select">
-                            <option value="">2024.1</option>
+                            <option value="" id="anoData">2024.1</option>
                             <option value="1">Opção 1</option>
                             <option value="2">Opção 2</option>
                             <option value="3">Opção 3</option>
@@ -109,7 +109,7 @@
                     </label>
                     <label for="">
                         <select id="select">
-                            <option value="">Cidade 1</option>
+                            <option value="" >Cidade 1</option>
                             <option value="1">Opção 1</option>
                             <option value="2">Opção 2</option>
                             <option value="3">Opção 3</option>
