--- a/web-data-viz/public/cadastrarUsuario.html
+++ b/web-data-viz/public/cadastrarUsuario.html
@@ -18,7 +18,7 @@
 <script data-jsd-embedded data-key="c1c8f828-306c-4170-bbb7-1b74655c36af"
 data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
 
-<body onload=" listarFunc()">
+<body> <!-- onload=" listarFunc()" -->
     <main>
         <div class="sidebar">
             <img src="./assets/imgs/logoBranco-semfundo.png" style=" padding: 20px 20px 0px 20px;">
