--- a/web-data-viz/public/cadastrarUsuario.html
+++ b/web-data-viz/public/cadastrarUsuario.html
@@ -25,7 +25,7 @@ data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassi
             <!-- <button class="menu-toggle">&#9776;</button> -->
     
             <nav class="menu">
-                <a href="#" class="menu-item">
+                <a href="dashboard.html" class="menu-item">
                     <span class="material-symbols-outlined">monitoring</span>
                     <span>Dashboards</span>
                 </a>
