--- a/web-data-viz/public/dashboard.html
+++ b/web-data-viz/public/dashboard.html
@@ -30,7 +30,7 @@
                     <span class="material-symbols-outlined">monitoring</span>
                     <span>Dashboards</span>
                 </a>
-                <a href="#" class="menu-item">
+                <a href="cadastrarUsuario.html" class="menu-item">
                     <span class="material-symbols-outlined">add_circle</span>
                     <span>Cadastrar</span>
                 </a>
