--- a/web-data-viz/public/entrar.html
+++ b/web-data-viz/public/entrar.html
@@ -34,7 +34,7 @@
             <div class="conteudoEntrarDir EntrarEnvio">
     <h1>Entrar</h1>
     <!-- <p>Não possui conta? <a href="cadastrar.html">Criar conta</a></p> -->
-    <input oninput="validarEmail()" class="Entrar-campos" type="text" placeholder="Email" id="email_input">
+    <input  class="Entrar-campos" type="text" placeholder="Email" id="email_input">
     <div id="emailError" class="error-message">E-mail inválido</div>
     <input class="Entrar-campos" type="password" placeholder="Senha" id="senha_input">
     <div class="btnEntrar">
