--- a/web-data-viz/public/dashboard.html
+++ b/web-data-viz/public/dashboard.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script src="./js/sessao.js"></script>
+    <!-- <script src="./js/sessao.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="css/dashboard.css">
     <title>apdata</title>
@@ -74,26 +74,26 @@
                             <div class="container-dormitorios">
                                 <div class="dados-dormitorio">
                                     <h4>1 Dormitorio</h4>
-                                    <span id="umDormitorio">R$ 1.200,00</span>
+                                    <span id="umDormitorio"></span>
                                 </div>
                                 <div class="dados-dormitorio">
                                     <h4>2 Dormitorio</h4>
-                                    <span id="doisDormitorio">R$ 1.200,00</span>
+                                    <span id="doisDormitorio"></span>
                                 </div>
                                 <div class="dados-dormitorio">
                                     <h4>3 Dormitorio</h4>
-                                    <span id="tresDormitorio">R$ 1.200,00</span>
+                                    <span id="tresDormitorio"></span>
                                 </div>
                                 <div class="dados-dormitorio">
                                     <h4>4+ Dormitorio</h4>
-                                    <span id="quatroDormitorio">R$ 1.200,00</span>
+                                    <span id="quatroDormitorio"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="container-kpi2-2">
                             <h3>Média de moradores por domicilio</h3>
                             <div>
-                                <span id="mediaMoradores">3.2</span>
+                                <span id="mediaMoradores"></span>
                             </div>
                         </div>
                     </div>
@@ -202,16 +202,16 @@
                         <h3 style="font-size: 14px; font-weight: 600;">Variação Anual Acumulada (%)</h3>
                         <div class="container-indicadores">
                             <div>
-                                <span id="somaCidade1"> +1,04%</span>
+                                <span id="somaCidade1"></span>
                             </div>
                             <div>
-                                <span id="somaCidade2"> +1,04%</span>
+                                <span id="somaCidade2"></span>
                             </div>
                             <div>
-                                <span id="somaCidade3"> +1,04%</span>
+                                <span id="somaCidade3"></span>
                             </div>
                             <div>
-                                <span id="somaCidade4"> +1,04%</span>
+                                <span id="somaCidade4"></span>
                             </div>
                         </div>
                     </div>
