--- a/web-data-viz/public/dashboard.html
+++ b/web-data-viz/public/dashboard.html
@@ -19,7 +19,8 @@
 <script data-jsd-embedded data-key="c1c8f828-306c-4170-bbb7-1b74655c36af"
     data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
 
-<body onload="buscarDadosCidade(); buscarDados();">
+<body onload="buscarDadosCidade();">
+<!-- <body onload="buscarDadosCidade(); buscarDados();"> -->
     <main>
         <div class="sidebar">
             <img src="./assets/imgs/logoBranco-semfundo.png" style=" padding: 20px 20px 0px 20px;">
@@ -107,15 +108,15 @@
             <div class="container-inferior">
                 <div class="container-selects">
                     <label for="">
-                        <select id="selectAno" onchange=buscarDados()>
+                        <select id="selectAno" >
                             <option value="2022">2022</option>
                             <option value="2023">2023</option>
-                            <option value="2024" selected>2024</option>
+                            <option value="2024">2024</option>
                         </select>
                     </label>
                     <label for="">
-                        <select id="selectCidade1" onchange=buscarDados()>
-                            <option value="São Paulo" selected>São Paulo</option>
+                        <select id="selectCidade1" onchange="buscarDados()">
+                            <option value="São Paulo" >São Paulo</option>
                             <option value="Barueri">Barueri</option>
                             <option value="Campinas">Campinas</option>
                             <option value="Diadema">Diadema</option>
@@ -134,7 +135,7 @@
                         </select>
                     </label>
                     <label for="">
-                        <select id="selectCidade2" onchange=buscarDados()>
+                        <select id="selectCidade2" onchange="buscarDados()">
                             <option value="São Paulo">São Paulo</option>
                             <option value="Barueri">Barueri</option>
                             <option value="Campinas" selected>Campinas</option>
@@ -154,7 +155,7 @@
                         </select>
                     </label>
                     <label for="">
-                        <select id="selectCidade3" onchange=buscarDados()>
+                        <select id="selectCidade3" onchange="buscarDados()">
                             <option value="São Paulo">São Paulo</option>
                             <option value="Barueri" selected>Barueri</option>
                             <option value="Campinas">Campinas</option>
