--- a/web-data-viz/public/cadastrarEmpresa.html
+++ b/web-data-viz/public/cadastrarEmpresa.html
@@ -10,13 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script src="./js/sessao.js"></script>
     <script src="./js/cadastroEmpresa.js" ></script>
     <link rel="stylesheet" href="css/styleCadastrarUsuario.css">
     <title>apdata</title>
 </head>
-<script data-jsd-embedded data-key="c1c8f828-306c-4170-bbb7-1b74655c36af"
-data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
 
 <body onload="listarEmpresas()"> <!-- onload=" listarFunc()" -->
     <main>
@@ -33,10 +30,10 @@ data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassi
                     <span class="material-symbols-outlined">add_circle</span>
                     <span>Cadastrar</span>
                 </a>
-                <!-- <a href="#" class="menu-item">
+                <a href="perfil.html" class="menu-item">
                     <span class="material-symbols-outlined">account_circle</span>
                     <span>Perfil</span>
-                </a> -->
+                </a>
                 <a href="entrar.html" class="menu-item logout">
                     <span class="material-symbols-outlined">logout</span>
                     <span>Sair</span>
