Subindo alterações kpis

--- a/web-data-viz/public/dashboardConstrutora.html
+++ b/web-data-viz/public/dashboardConstrutora.html
@@ -80,9 +80,9 @@
                                     <h4>População Total</h4>
                                     <span id="populacao"></span>
                                 </div>
-                                <div class="dados-dormitorio">
+                                <div class="dados-dormitorio-2">
                                     <h4>População morando de aluguel</h4>
-                                    <canvas id="donutChartAluguel"></canvas>
+                                    <canvas id="donutChartAluguel" width="220" height="150" ></canvas>
                                     
                                 </div>  
                                 <div class="container-kpi2-2">
