feat: adicao funcao de dados no select de anos

--- a/web-data-viz/public/dashboard.html
+++ b/web-data-viz/public/dashboard.html
@@ -103,7 +103,7 @@
             <div class="container-inferior">
                 <div class="container-selects">
                     <label for="">
-                        <select id="selectAno" >
+                        <select id="selectAno" onchange="buscarDados()">
                             <option value="2022">2022</option>
                             <option value="2023">2023</option>
                             <option value="2024">2024</option>
