feat: modelando 2 dash para meu monitor e fazendo validacao se é construtora ou imobiliaria

--- a/web-data-viz/public/cadastrarEmpresa.html
+++ b/web-data-viz/public/cadastrarEmpresa.html
@@ -22,7 +22,7 @@
             <!-- <button class="menu-toggle">&#9776;</button> -->
     
             <nav class="menu">
-                <a href="dashboard.html" class="menu-item">
+                 <a onclick= "redirecionarDash()" class="menu-item">
                     <span class="material-symbols-outlined">monitoring</span>
                     <span>Dashboards</span>
                 </a>
