--- a/web-data-viz/public/dashboardConstrutora.html
+++ b/web-data-viz/public/dashboardConstrutora.html
@@ -31,14 +31,14 @@
                     <span class="material-symbols-outlined">monitoring</span>
                     <span>Dashboards</span>
                 </a>
-                <a href="cadastrarUsuario.html" class="menu-item">
+                <a onclick="redirecionarCadastro()" class="menu-item" id="cadastroMenu">
                     <span class="material-symbols-outlined">add_circle</span>
                     <span>Cadastrar</span>
                 </a>
-                <!-- <a href="#" class="menu-item">
+                <a href="perfil.html" class="menu-item">
                     <span class="material-symbols-outlined">account_circle</span>
                     <span>Perfil</span>
-                </a> -->
+                </a>
                 <a href="entrar.html" class="menu-item logout">
                     <span class="material-symbols-outlined">logout</span>
                     <span>Sair</span>
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="dados-dormitorio-2">
                                     <h4>População morando de aluguel</h4>
-                                    <canvas id="donutChartAluguel" width="220" height="150" ></canvas>
+                                    <canvas id="donutChartAluguel" width="170" height="170" style="margin-top: -15px;"></canvas>
                                     
                                 </div>  
                                 <div class="container-kpi2-2">
