Tirando acentos da Dash construtora

--- a/web-data-viz/public/dashboardConstrutora.html
+++ b/web-data-viz/public/dashboardConstrutora.html
@@ -52,21 +52,21 @@
                         <span>Você está visualizando os dados de <span>
                                 <select id="select_cidade" onchange="buscarDadosCidade(), atualizarGraficoAlugado(), buscarPopulacao(), buscarScore(), carregarDadosSidra()" >
                                     <option value="Campinas">Campinas</option>
-                                    <option value="São Paulo">São Paulo</option>
+                                    <option value="Sao Paulo">São Paulo</option>
                                     <option value="Barueri">Barueri</option>
                                     <option value="Diadema">Diadema</option>
-                                    <option value="Guarujá">Guarujá</option>
+                                    <option value="Guaruja">Guarujá</option>
                                     <option value="Guarulhos">Guarulhos</option>
                                     <option value="Osasco">Osasco</option>
                                     <option value="Praia Grande">Praia Grande</option>
-                                    <option value="Ribeirão Preto">Ribeirão Preto</option>
-                                    <option value="Santo André">Santo André</option>
+                                    <option value="Ribeirao Preto">Ribeirão Preto</option>
+                                    <option value="Santo Andre">Santo André</option>
                                     <option value="Santos">Santos</option>
-                                    <option value="São Bernardo do Campo">São Bernardo do Campo</option>
-                                    <option value="São Caetano do Sul">São Caetano do Sul</option>
-                                    <option value="São José do Rio Preto">São José do Rio Preto</option>
-                                    <option value="São José dos Campos">São José dos Campos</option>
-                                    <option value="São Vicente">São Vicente</option>
+                                    <option value="Sao Bernardo do Campo">São Bernardo do Campo</option>
+                                    <option value="Sao Caetano do Sul">São Caetano do Sul</option>
+                                    <option value="Sao Jose do Rio Preto">São José do Rio Preto</option>
+                                    <option value="Sao Jose dos Campos">São José dos Campos</option>
+                                    <option value="Sao Vicente">São Vicente</option>
                                 </select>
                     </div>
                     <div class="kpi-2">
@@ -112,82 +112,82 @@
                     </label>
                     <label for="">
                         <select id="selectCidade1" onchange="buscarDados()">
-                            <option value="São Paulo" >São Paulo</option>
+                            <option value="Sao Paulo" >São Paulo</option>
                             <option value="Barueri">Barueri</option>
                             <option value="Campinas">Campinas</option>
                             <option value="Diadema">Diadema</option>
-                            <option value="Guarujá">Guarujá</option>
+                            <option value="Guaruja">Guarujá</option>
                             <option value="Guarulhos">Guarulhos</option>
                             <option value="Osasco">Osasco</option>
                             <option value="Praia Grande">Praia Grande</option>
-                            <option value="Ribeirão Preto">Ribeirão Preto</option>
-                            <option value="Santo André">Santo André</option>
+                            <option value="Ribeirao Preto">Ribeirão Preto</option>
+                            <option value="Santo Andre">Santo André</option>
                             <option value="Santos">Santos</option>
-                            <option value="São Bernardo do Campo">São Bernardo do Campo</option>
-                            <option value="São Caetano do Sul">São Caetano do Sul</option>
-                            <option value="São José do Rio Preto">São José do Rio Preto</option>
-                            <option value="São José dos Campos">São José dos Campos</option>
-                            <option value="São Vicente">São Vicente</option>
+                            <option value="Sao Bernardo do Campo">São Bernardo do Campo</option>
+                            <option value="Sao Caetano do Sul">São Caetano do Sul</option>
+                            <option value="Sao Jose do Rio Preto">São José do Rio Preto</option>
+                            <option value="Sao Jose dos Campos">São José dos Campos</option>
+                            <option value="Sao Vicente">São Vicente</option>
                         </select>
                     </label>
                     <label for="">
                         <select id="selectCidade2" onchange="buscarDados()">
-                            <option value="São Paulo">São Paulo</option>
+                            <option value="Sao Paulo">São Paulo</option>
                             <option value="Barueri">Barueri</option>
                             <option value="Campinas" selected>Campinas</option>
                             <option value="Diadema">Diadema</option>
-                            <option value="Guarujá">Guarujá</option>
+                            <option value="Guaruja">Guarujá</option>
                             <option value="Guarulhos">Guarulhos</option>
                             <option value="Osasco">Osasco</option>
                             <option value="Praia Grande">Praia Grande</option>
-                            <option value="Ribeirão Preto">Ribeirão Preto</option>
-                            <option value="Santo André">Santo André</option>
+                            <option value="Ribeirao Preto">Ribeirão Preto</option>
+                            <option value="Santo Andre">Santo André</option>
                             <option value="Santos">Santos</option>
-                            <option value="São Bernardo do Campo">São Bernardo do Campo</option>
-                            <option value="São Caetano do Sul">São Caetano do Sul</option>
-                            <option value="São José do Rio Preto">São José do Rio Preto</option>
-                            <option value="São José dos Campos">São José dos Campos</option>
-                            <option value="São Vicente">São Vicente</option>
+                            <option value="Sao Bernardo do Campo">São Bernardo do Campo</option>
+                            <option value="Sao Caetano do Sul">São Caetano do Sul</option>
+                            <option value="Sao Jose do Rio Preto">São José do Rio Preto</option>
+                            <option value="Sao Jose dos Campos">São José dos Campos</option>
+                            <option value="Sao Vicente">São Vicente</option>
                         </select>
                     </label>
                     <label for="">
                         <select id="selectCidade3" onchange="buscarDados()">
-                            <option value="São Paulo">São Paulo</option>
+                            <option value="Sao Paulo">São Paulo</option>
                             <option value="Barueri" selected>Barueri</option>
                             <option value="Campinas">Campinas</option>
                             <option value="Diadema">Diadema</option>
-                            <option value="Guarujá">Guarujá</option>
+                            <option value="Guaruja">Guarujá</option>
                             <option value="Guarulhos">Guarulhos</option>
                             <option value="Osasco">Osasco</option>
                             <option value="Praia Grande">Praia Grande</option>
-                            <option value="Ribeirão Preto">Ribeirão Preto</option>
-                            <option value="Santo André">Santo André</option>
+                            <option value="Ribeirao Preto">Ribeirão Preto</option>
+                            <option value="Santo Andre">Santo André</option>
                             <option value="Santos">Santos</option>
-                            <option value="São Bernardo do Campo">São Bernardo do Campo</option>
-                            <option value="São Caetano do Sul">São Caetano do Sul</option>
-                            <option value="São José do Rio Preto">São José do Rio Preto</option>
-                            <option value="São José dos Campos">São José dos Campos</option>
-                            <option value="São Vicente">São Vicente</option>
+                            <option value="Sao Bernardo do Campo">São Bernardo do Campo</option>
+                            <option value="Sao Caetano do Sul">São Caetano do Sul</option>
+                            <option value="Sao Jose do Rio Preto">São José do Rio Preto</option>
+                            <option value="Sao Jose dos Campos">São José dos Campos</option>
+                            <option value="Sao Vicente">São Vicente</option>
                         </select>
                     </label>
                     <label for="">
                         <select id="selectCidade4" onchange="buscarDados()">
-                            <option value="São Paulo">São Paulo</option>
+                            <option value="Sao Paulo">São Paulo</option>
                             <option value="Barueri">Barueri</option>
                             <option value="Campinas">Campinas</option>
                             <option value="Diadema">Diadema</option>
-                            <option value="Guarujá">Guarujá</option>
+                            <option value="Guaruja">Guarujá</option>
                             <option value="Guarulhos">Guarulhos</option>
                             <option value="Osasco" selected>Osasco</option>
                             <option value="Praia Grande">Praia Grande</option>
-                            <option value="Ribeirão Preto">Ribeirão Preto</option>
-                            <option value="Santo André">Santo André</option>
+                            <option value="Ribeirao Preto">Ribeirão Preto</option>
+                            <option value="Santo Andre">Santo André</option>
                             <option value="Santos">Santos</option>
-                            <option value="São Bernardo do Campo">São Bernardo do Campo</option>
-                            <option value="São Caetano do Sul">São Caetano do Sul</option>
-                            <option value="São José do Rio Preto">São José do Rio Preto</option>
-                            <option value="São José dos Campos">São José dos Campos</option>
-                            <option value="São Vicente">São Vicente</option>
+                            <option value="Sao Bernardo do Campo">São Bernardo do Campo</option>
+                            <option value="Sao Caetano do Sul">São Caetano do Sul</option>
+                            <option value="Sao Jose do Rio Preto">São José do Rio Preto</option>
+                            <option value="Sao Jose dos Campos">São José dos Campos</option>
+                            <option value="Sao Vicente">São Vicente</option>
                         </select>
                     </label>
                 </div>
